# ChangeLog for vmware overlay
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  28 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixing up quoting issues in the eclasses, kindly pointed out by phreak``.
  
  27 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fix up basic repoman failings, in preparation for merging with the main tree...
  
  17 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Thanks to the eagle eyes of Cardoe, we now have a dependency in the vmware
  eclass for the update-mime-info tool.  That should get inheritted automatically
  by every ebuild, so this should fix it for all our packages.
  
  14 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixed up the LONGNAME/SHORTNAME issue when using the vmware-any-any init
  script.  Also added patch 009 to the workstation-4.5 patchset.
  
  14 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Added patch 009 to the latest versions of player, workstation and server.
  This patch changes the "not configured" error message of the init script.
  
  14 Jul 2006; Mike Auty <ikelos@gentoo.org> ChangeLog:
  Fixed up three broken manifests...

  13 Jul 2006; Chris Gianelloni <wolf31o2@gentoo.org> ChangeLog:
  This is another fairly large update from me, but it is mostly clean-up stuff.
  
  * Removed old and unused vmware-pkg.eclass
  * Removed older "test" functions from vmware.eclass for the modules builds
  * Changed not-vmware_src_install to vmware_src_install and exported it
  * Added vmware-workstation-tools-5.5.1-r1 ebuild
  * Renamed vmware-workstation-tools-4.5.3 ebuild to
  vmware-workstation-tools-4.5.3-r1 so it is an "upgrade" for users
  * Removed vmware-workstation-5.5.1.19175-r6
  * Cleaned older vmware-server and vmware-server-console ebuilds
  * Cleaned older vmware-player ebuilds
  * Made sure everything has ~amd64 ~x86 KEYWORDS, except Workstation 3.x
  * Made sure all digests were correct for packages I touched
  